# FileReader

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Components.cpp.591BD6F5679F5F8C.idx  Components.hpp.BAE3F27DF0A6DBCC.idx  FileHandler.cpp.76345EDF5AF72A50.idx
components/: CMakeLists.txt  Components.hpp  Exceptions.hpp
components/include/: Components.hpp
components/src/: Components.cpp
file_handler/: CMakeLists.txt
file_handler/include/: FileHandler.hpp
